--- a/hafta 4/imagegallery.html
+++ b/hafta 4/imagegallery.html
@@ -59,13 +59,25 @@
             </div>
         </nav>
     </div>
+
     <div class="container">
-        <div class="row">
-            <div class="col-12 text-center p-5">
-                <h2 class="text-black-50">Basic Thumbnail Gallery</h2>
-            </div>
+        <div class="alert alert-info alert-dismissible fade show">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+            <strong>Merhaba Hoşgeldiniz!</strong>
+            Kullanıcı sözleşmemizi incelemek için
+            <a href="#" class="alert-link">tıklayınız</a>.
+        </div>
+
+
+        <div class="jumbotron">
+            <h1>Basic Image Gallery</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt laborum excepturi ratione! Ab doloribus
+                animi cumque nihil, excepturi ratione nemo reiciendis dolor veritatis, iste dolorem incidunt? Odit
+                temporibus aperiam illo.</p>
         </div>
     </div>
+
     <div class="container">
         <div class="row ">
             <div class="col-md-2 col-sm-4 p-3">
